--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
             href="style.css"
         />
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> <!--JQUERY LINK-->
     </head>
 
     <body>
+            <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> <!--VUE LINK-->
             <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
